--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!doctype html>
 <html class="no-js" lang="">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>La Iluminada</title>
+	<link href="css/styles.css" rel="stylesheet" type="text/css" media="screen" />
+	</head>
 
-<title>La Iluminada</title>
+	<body>
+		<header>
+			<a href=""><img src="img/logo.png"></a>
+			<nav>
+				<ul>
+					<li><a href="">inicio</a></li>
+					<li><a href="">productos</a></li>
+					<li><a href="">proyectos</a></li>
+					<li><a href="">noticias</a></li>
+					<li><a href="">acerca de</a></li>
+					<li><a href="">contacto</a></li>
+				</ul>
+			</nav>
+			<h1>Soluciones innovadoras para su hogar.</h1>
+		</header>
 
-
-<link href="css/styles.css" rel="stylesheet" type="text/css" media="screen" />
-
-</head>
-<body>
-	
-</body>
+		
+	</body>
 </html>
