--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 
 	<body>
 		<header>
-			<a href=""><img src="img/logo.png"></a>
+			<a href="#"><img src="img/logo.png" class="logo"></a>
 			<nav>
 				<ul>
-					<li><a href="">inicio</a></li>
-					<li><a href="">productos</a></li>
-					<li><a href="">proyectos</a></li>
-					<li><a href="">noticias</a></li>
-					<li><a href="">acerca de</a></li>
-					<li><a href="">contacto</a></li>
+					<li class="mayuscula"><a href="#">inicio</a></li>
+					<li class="mayuscula"><a href="#">productos</a></li>
+					<li class="mayuscula"><a href="#">proyectos</a></li>
+					<li class="mayuscula"><a href="#">noticias</a></li>
+					<li class="mayuscula"><a href="#">acerca de</a></li>
+					<li class="mayuscula"><a href="#">contacto</a></li>
 				</ul>
 			</nav>
-			<h1>Soluciones innovadoras para su hogar.</h1>
+			<h1 class="title">Soluciones innovadoras </br>para su hogar.</h1>
 		</header>
-
-		
+		<div>
+		</div>
 	</body>
 </html>
