avance del acerca de

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 			</nav>
 			<h1 class="title">Soluciones innovadoras </br>para su hogar.</h1>
 		</header>
-		<div>
-		</div>
+		<section class= "acerca">
+			<h2 class= "title right">Acerca de</h2>
+			<img src="img/banner-acerca.jpg" class= "banner">
+			<p>Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.</p>
+			<p>Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.</p>
+			<p>Maecenas eu diam tristique, accumsan risus nec, pharetra libero.</p>
+		</section>
+
 	</body>
 </html>
