agregado equipo de trabajo en acerca de

--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
 			<p>Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.</p>
 			<p>Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.Maecenas eu diam tristique, accumsan risus nec, pharetra libero.</p>
 			<p>Maecenas eu diam tristique, accumsan risus nec, pharetra libero.</p>
+
+			<div>
+				<ul class="team">
+					<li><img src="img/Eva-C.png" class="team-img">
+					<h3>Eva Corrales</h3></br> <h5>Diseñadora</h5></li>
+					<li><img src="img/Carlos-O.png" class="team-img">
+					<h3>Carlos Oviedo</h3> </br> <h5>Ingeniero</h5></li>
+					<li><img src="img/Daniel-C.png" class="team-img">
+					<h3>Daniel Chavez</h3> </br> <h5>Contratista</h5></li>
+				</ul>
+			</div>
+
 		</section>
 
 	</body>
