--- a/index.html
+++ b/index.html
@@ -39,8 +39,28 @@
 					<h3>Daniel Chavez</h3> </br> <h5>Contratista</h5></li>
 				</ul>
 			</div>
-
 		</section>
+
+		<footer>
+			<section class="contact">
+				<h2 class="title left">Contacto</h2>
+				<ul class="social">
+					<li><a href="#"><img src="img/facebook3.svg"></a></li>
+					<li><a href="#"><img src="img/social71.svg"></a></li>
+					<li><a href="#"><img src="img/linkedin1.svg"></a></li>
+					<li><a href="#"><img src="img/social92.svg"></a></li>
+				</ul>
+				<p> Tel: 22098923 </br> 
+				 Correo: </br>
+				 iluminadaWeb@gmail.com</p>
+			</section>
+			<form class="send">
+				<input type="text" name='' class="text" placeholder="Nombre Completo:"></br>
+				<input type="text" name='' class="text" placeholder="Correo Electronico:"></br>
+				<textarea type="text" name='' class="text" placeholder="Mensaje:"></textarea></br>
+				<button class="button-enviar"> Enviar</button>
+			</form>
+		</footer>
 
 	</body>
 </html>
