--- a/index.html
+++ b/index.html
@@ -51,12 +51,11 @@
 					<li><a href="#"><img src="img/social92.svg"></a></li>
 				</ul>
 				<p> Tel: 22098923 </br> 
-				 Correo: </br>
-				 iluminadaWeb@gmail.com</p>
+				 Correo: lailuminada@gmail.com</p>
 			</section>
 			<form class="send right">
-				<input type="text" size="80" placeholder="Nombre"></br>
-				<input type="text" size="80" placeholder="Correo"></br>
+				<input type="text" size="77" placeholder="Nombre"></br>
+				<input type="text" size="77" placeholder="Correo"></br>
 				<textarea type="text" rows="4" cols="55" placeholder="Mensaje"></textarea></br>
 				<button class="button-enviar"> Enviar</button>
 			</form>
