Contactenos, algunos detalles y Noticias falta terminar donde abre la noticia

--- a/index.html
+++ b/index.html
@@ -22,6 +22,25 @@
 			</nav>
 			<h1 class="title">Soluciones innovadoras </br>para su hogar.</h1>
 		</header>
+		<section class="noticias">
+			<h2 class="title title-left noticias"> Noticias </h2>
+			<div class="conteiner">
+				<div class="colum-1">
+				<h2>Iluminacion del Museo de Arte</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis nibh a neque vulputate posuere non a odio. Morbi convallis mi eu tortor pellentesque, id vestibulum justo feugiat. Vivamus luctus ut lectus quis blandit. Quisque vel diam a purus scelerisque hendrerit quis ac est. Praesent tincidunt convallis nulla. Quisque id pellentesque mi. Praesent in mauris et turpis rutrum scelerisque at non tellus. Mauris ut tortor et sem egestas hendrerit.</p> 
+				</div>
+				<img src="img/museo528x350.jpg" class="colum-2">
+				<p class= "p-large">Aenean facilisis tristique velit, ac aliquet dui malesuada et. Mauris sit amet diam ut lorem interdum maximus ac in lectus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut ullamcorper pulvinar purus ut porta. Integer id ipsum ultrices, ullamcorper ipsum eget, iaculis felis. Aenean hendrerit cursus sem sed venenatis. Sed commodo odio sit amet rhoncus pharetra.</p>
+			</div>
+			<div class="mas-noticias">
+				<ul>
+					<li> <h3 class="sub-title">Ingreso de Iluminaria</h3> <a href="#"><img src="img/bombillos-colores.jpg" class="width-img"></a></li>
+					<li> <h3 class="sub-title">Personal nuevo</h3> <a href="#"><img src="img/personal.jpeg" class="width-img"></a></li>
+					<li> <h3 class="sub-title">Segundo Aniversario</h3> <a href="#"><img src="img/aniversario.jpeg" class="width-img"></a></li>
+					<li> <h3 class="sub-title">Trabajo en panama</h3> <a href="#"><img src="img/panama.jpeg" class="width-img"></a></li>
+				</ul>	
+			</div>
+		</section>
 		<section class= "acerca">
 			<h2 class= "title title-right">Acerca de</h2>
 			<img src="img/banner-acerca.jpg" class= "banner">
@@ -42,23 +61,21 @@
 		</section>
 
 		<footer>
-			<section class="contact left">
+			<section class="contact">
 				<h2 class="title title-left">Contacto</h2>
-				<ul class="social">
-					<li><a href="#"><img src="img/facebook3.svg"></a></li>
-					<li><a href="#"><img src="img/social71.svg"></a></li>
-					<li><a href="#"><img src="img/linkedin1.svg"></a></li>
-					<li><a href="#"><img src="img/social92.svg"></a></li>
-				</ul>
-				<p> Tel: 22098923 </br> 
-				 Correo: lailuminada@gmail.com</p>
+				<form class="send right">
+					<input type="text" size="77" placeholder="Nombre"></br>
+					<input type="text" size="77" placeholder="Correo"></br>
+					<textarea type="text" rows="4" cols="55" placeholder="Mensaje"></textarea></br>
+					<button class="button-enviar"> Enviar</button>
+				</form>
+					<ul class="social">
+						<li><a href="#"><img src="img/facebook3.svg"></a></li>
+						<li><a href="#"><img src="img/social71.svg"></a></li>
+						<li><a href="#"><img src="img/linkedin1.svg"></a></li>
+						<li><a href="#"><img src="img/social92.svg"></a></li>
+					</ul>	
 			</section>
-			<form class="send right">
-				<input type="text" size="77" placeholder="Nombre"></br>
-				<input type="text" size="77" placeholder="Correo"></br>
-				<textarea type="text" rows="4" cols="55" placeholder="Mensaje"></textarea></br>
-				<button class="button-enviar"> Enviar</button>
-			</form>
 		</footer>
 
 	</body>
